tests/snapshots/reconstruction__composition_framed_mark.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(composition, 1)"
---
{
  "component_count": 2,
  "components": [
    {
      "id": 0,
      "role": "primary",
      "region_ids": [
        0
      ],
      "geometry": {
        "bounding_box": {
          "x": 8,
          "y": 8,
          "width": 48,
          "height": 48
        },
        "area": 704,
        "area_share": 0.8,
        "centroid": {
          "x": 31.5,
          "y": 31.5
        },
        "region_count": 1,
        "contour": {
          "kind": "closed",
          "hole_count": 1,
          "stroke_width": 3.0
        }
      },
      "appearance": {
        "uniform": true,
        "fill_kinds": [
          "flat"
        ],
        "colour": "#18181b"
      }
    },
    {
      "id": 1,
      "role": "secondary",
      "region_ids": [
        1
      ],
      "geometry": {
        "bounding_box": {
          "x": 24,
          "y": 24,
          "width": 16,
          "height": 16
        },
        "area": 216,
        "area_share": 0.2,
        "centroid": {
          "x": 31.5,
          "y": 31.5
        },
        "region_count": 1,
        "contour": {
          "kind": "filled",
          "hole_count": 0
        }
      },
      "appearance": {
        "uniform": true,
        "fill_kinds": [
          "flat"
        ],
        "colour": "#c81e1e"
      }
    }
  ],
  "relationships": [
    {
      "from": 0,
      "to": 1,
      "relation": "contains",
      "gap": 0,
      "centre_offset": {
        "x": 0.0,
        "y": 0.0
      },
      "size_ratio": 0.3
    }
  ],
  "alignments": [
    {
      "line": "vertical",
      "edge": "centre",
      "position": 32.0,
      "component_ids": [
        0,
        1
      ]
    },
    {
      "line": "horizontal",
      "edge": "centre",
      "position": 32.0,
      "component_ids": [
        0,
        1
      ]
    }
  ]
}
