tests/snapshots/reconstruction__composition_uneven_row.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(composition, 1)"
---
{
  "component_count": 4,
  "components": [
    {
      "id": 0,
      "role": "primary",
      "region_ids": [
        0
      ],
      "geometry": {
        "bounding_box": {
          "x": 4,
          "y": 28,
          "width": 8,
          "height": 8
        },
        "area": 64,
        "area_share": 0.3,
        "centroid": {
          "x": 7.5,
          "y": 31.5
        },
        "region_count": 1,
        "contour": {
          "kind": "filled",
          "hole_count": 0
        }
      },
      "appearance": {
        "uniform": true,
        "fill_kinds": [
          "flat"
        ],
        "colour": "#18181b"
      }
    },
    {
      "id": 1,
      "role": "primary",
      "region_ids": [
        1
      ],
      "geometry": {
        "bounding_box": {
          "x": 16,
          "y": 28,
          "width": 8,
          "height": 8
        },
        "area": 64,
        "area_share": 0.3,
        "centroid": {
          "x": 19.5,
          "y": 31.5
        },
        "region_count": 1,
        "contour": {
          "kind": "filled",
          "hole_count": 0
        }
      },
      "appearance": {
        "uniform": true,
        "fill_kinds": [
          "flat"
        ],
        "colour": "#18181b"
      }
    },
    {
      "id": 2,
      "role": "primary",
      "region_ids": [
        2
      ],
      "geometry": {
        "bounding_box": {
          "x": 36,
          "y": 28,
          "width": 8,
          "height": 8
        },
        "area": 64,
        "area_share": 0.3,
        "centroid": {
          "x": 39.5,
          "y": 31.5
        },
        "region_count": 1,
        "contour": {
          "kind": "filled",
          "hole_count": 0
        }
      },
      "appearance": {
        "uniform": true,
        "fill_kinds": [
          "flat"
        ],
        "colour": "#18181b"
      }
    },
    {
      "id": 3,
      "role": "primary",
      "region_ids": [
        3
      ],
      "geometry": {
        "bounding_box": {
          "x": 52,
          "y": 28,
          "width": 8,
          "height": 8
        },
        "area": 64,
        "area_share": 0.3,
        "centroid": {
          "x": 55.5,
          "y": 31.5
        },
        "region_count": 1,
        "contour": {
          "kind": "filled",
          "hole_count": 0
        }
      },
      "appearance": {
        "uniform": true,
        "fill_kinds": [
          "flat"
        ],
        "colour": "#18181b"
      }
    }
  ],
  "relationships": [
    {
      "from": 0,
      "to": 1,
      "relation": "right_of",
      "gap": 4,
      "centre_offset": {
        "x": 12.0,
        "y": 0.0
      },
      "size_ratio": 1.0
    },
    {
      "from": 1,
      "to": 2,
      "relation": "right_of",
      "gap": 12,
      "centre_offset": {
        "x": 20.0,
        "y": 0.0
      },
      "size_ratio": 1.0
    },
    {
      "from": 2,
      "to": 3,
      "relation": "right_of",
      "gap": 8,
      "centre_offset": {
        "x": 16.0,
        "y": 0.0
      },
      "size_ratio": 1.0
    }
  ],
  "alignments": [
    {
      "line": "horizontal",
      "edge": "start",
      "position": 28.0,
      "component_ids": [
        0,
        1,
        2,
        3
      ]
    },
    {
      "line": "horizontal",
      "edge": "centre",
      "position": 32.0,
      "component_ids": [
        0,
        1,
        2,
        3
      ]
    },
    {
      "line": "horizontal",
      "edge": "end",
      "position": 36.0,
      "component_ids": [
        0,
        1,
        2,
        3
      ]
    }
  ],
  "spacings": [
    {
      "along": "horizontal",
      "component_ids": [
        0,
        1,
        2,
        3
      ],
      "gap": {
        "mean": 8.0,
        "deviation": 3.3
      },
      "even": false
    }
  ],
  "repeats": [
    {
      "component_ids": [
        0,
        1,
        2,
        3
      ],
      "width": 8.0,
      "height": 8.0
    }
  ]
}
